# Parser-Verilog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  conaninfo.txt
benchmark/: yosys.v
example/: ot_parser  ot_parser.cpp  sample_parser  sample_parser.cpp
image/: .~lock.circuit.odg#  circuit.odg
parser-verilog/: verilog_data.hpp  verilog_driver.hpp  verilog_lexer.l  verilog_parser.yy
unittest/: regression  regression.cpp
